fix: wrap long transliterations

--- a/app/frontend/src/Presenter/Line.css
+++ b/app/frontend/src/Presenter/Line.css
@@ -122,7 +122,8 @@ p {
 }
 
 .line .source,
-.line .partition.block {
+.line .partition.block,
+.line .transliteration {
   display: flex;
   flex-wrap: wrap;
 }
